# IAAnalisisModel

./: .flake8  .gitattributes  .gitignore  LICENSE  README.md  legend.py  main.py  pyproject.toml  requirements.txt  settings.ini
app/: main.py
app/entities/collections/: __init__.py  track_collection.py  track_collections.py
app/entities/interfaces/: __init__.py  record_collection_base.py  tracker_base.py  tracker_service_base.py
app/entities/models/: BallState.py  HeatmapPoint.py  PlayerState.py  __init__.py  analyze_request.py
app/entities/trackers/: ball_tracker.py  player_tracker.py
app/entities/tracks/: track_detail.py
app/entities/utils/: __init__.py  singleton.py
app/layers/presentation/: diagram_processor.py  tracker_initiation.py
app/modules/camera_movement_estimator/: camera_movement_estimator.py
app/modules/player_ball_assigner/: player_ball_assigner.py
app/modules/plotting/: __init__.py  diagram_processor.py
app/modules/services/: __init__.py  database.py  r2_download.py  video_processing_service.py
app/modules/speed_and_distance_estimator/: speed_and_distance_estimator.py
app/modules/team_assigner/: team_assigner.py
app/modules/trackers/: __init__.py  tracker_factory.py  tracker_service.py
app/modules/view_transformer/: view_transformer.py
app/src/camera_movement_estimator/: camera_movement_estimator.py
app/src/player_ball_assigner/: player_ball_assigner.py
app/src/speed_and_distance_estimator/: speed_and_distance_estimator.py
app/src/trackers/: tracker.py
app/src/view_transformer/: view_transformer.py
app/tasks/: __init__.py  app.py  background_task.py  endpoints.py  runner.py  upload.py  upload_heatmaps.py
app/utils/: __init__.py  routes.py
(+86 files in other folders)
