[project]
name = "proyecto-capstone-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8>=7.3.0",
    "matplotlib>=3.10.3",
    "mplsoccer>=1.5.1",
    "numpy>1.25.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "supervision>=0.26.1",
    "torchmetrics>=1.8.0",
    "ultralytics>=8.3.170",
